# musicgen_finetune_rapbeats

./: .gitignore  BackEnd.py  FrontEnd.py  README.md  pyproject.toml  requirements.txt
backend.py/: fastapi_server.py
finetuning_scripts/: Data_preprocessing_+_data_preperation.ipynb  finetune_musicgen_runpod.ipynb
musicgen_streamlit_POC/: connect_with_runpod.py  convert_audio.py  streamlit_app.py
