[tool.poetry]
name = "musicgen-streamlit-poc"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
requests = "^2.31.0"
fastapi = "^0.111.0"
uvicorn ="^0.30.1"
# audio-to-midi = {git = "https://github.com/NFJones/audio-to-midi.git"}
paramiko = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

